Spacing Fixes

--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,7 @@ body {
     width: 100vw;
     height: 100%;
     position: absolute;
-    top: 73%;
+    top: 71%;
     left: calc(92% - 375px / 2);
     overflow: hidden;
     display: inline-block;
@@ -149,6 +149,7 @@ body {
     margin-left: 20px;
     color: var(--gray);
     margin-top: 0;
+    margin-bottom: 6px;
 }
 
 .tools-header {
@@ -157,7 +158,7 @@ body {
 }
 
 .project-container {
-    margin-bottom: 26px;
+    margin-bottom: 6px;
     padding-left: 8px;
     padding-right: 20px;
     display: flex;
@@ -167,7 +168,7 @@ body {
 .projects-header {
     margin-top: 10px;
     margin-left: 20px;
-    margin-bottom: 16px;
+    margin-bottom: 6px;
     color: var(--white);
 }
 
@@ -214,6 +215,7 @@ body {
     top: -10px;
     color: var(--gray);
     animation: open 200ms linear, growDown 200ms linear;
+    list-style-type: disc;
 }
 
 .intro-submenu > li:first-of-type {
@@ -223,7 +225,7 @@ body {
 }
 
 .intro-submenu.show {
-    display: inline-block;
+    display: block;
 }
 
 /* Skills Submenu */
@@ -560,6 +562,7 @@ nav {
     left: 0px;
     z-index: 3;
     background: linear-gradient(-135deg, rgb(18, 18, 18), var(--darkGray) 100%);
+    overflow: scroll;
 }
 
 .overlay-2 {
@@ -822,7 +825,7 @@ ul {
         padding-left: 0;
         padding-right: 0;
         font-size: 23px;
-        margin-bottom: 26px;
+        margin-bottom: 16px;
     }
 
     .skills {
@@ -841,7 +844,7 @@ ul {
 
     .skills-header {
         font-size: 45px;
-        margin-top: 26px;
+        margin-top: 16px;
     }
 
     .languages-container > li, .libraries-container > li, .frameworks-container > li, .tools-container > li {
@@ -870,11 +873,11 @@ ul {
     }
 
     .tools-container {
-        margin-bottom: 26px;
+        margin-bottom: 16px;
     }
 
     .projects-header {
-        margin-top: 26px;
+        margin-top: 16px;
     }
 
     .contact-info {
@@ -962,10 +965,12 @@ ul {
     }
 
     .intro-paragraph {
+        width: 132%;
         font-size: 15px;
         font-weight: 400;
         line-height: 1.5;
         padding: 0;
+        margin-left: 0px;
     }
 
     .intro-img {
@@ -993,7 +998,7 @@ ul {
         height: 100%;
         background-image: url(Images/border-bottom-reversed.png);
         position: absolute;
-        top: 77%;
+        top: 75%;
         left: 3%;
     }
 
@@ -1032,7 +1037,7 @@ ul {
     }
 
     .projects-header {
-        margin-top: 10px;
+        margin-top: 16px;
         margin-left: 117px;
         margin-bottom: 16px;
         color: var(--white);
@@ -1042,6 +1047,7 @@ ul {
     .project-container {
         margin-left: 84px;
         width: 50%;
+        margin-bottom: 28px;
     }
 
     .project {
